LOGCXX-151: Umlauts as literal in pattern layout won't be logged correctly